<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    >								<!-- 声明垂直分布的线性布局 -->
    <TextView
        android:id="@+id/TextView0"
        android:text="@string/login"
        style="@style/title"
        android:paddingTop="20dip"
        android:paddingBottom="20dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:password="false"
        >
    </TextView>
    <LinearLayout
        android:orientation="horizontal"
        android:paddingTop="25px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >

        <TextView
            style="@style/text"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/tvUid" />

        <EditText
            android:id="@+id/etUid"
            style="@style/edit"
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:hint="请输入账号"
            android:singleLine="true" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >

        <TextView
            style="@style/text"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/tvPwd" />

        <EditText
            android:id="@+id/etPwd"
            style="@style/edit"
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:hint="请输入密码"
            android:password="true"
            android:singleLine="true" />
    </LinearLayout>

    <!-- 新增加的LinearLayout -->

    <CheckBox
        android:id="@+id/cbRemember"
        style="@style/text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:checked="false"
        android:text="@string/cbRemember" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right|end"
        android:orientation="horizontal"
        android:paddingTop="20dip"
        android:paddingRight="20dip"
        android:paddingBottom="20dip">            <!-- 声明于显示按钮的线性布局 -->

        <Button
            android:id="@+id/btnLogin"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_700"
            android:insetLeft="10dp"
            android:minWidth="70dip"
            android:text="@string/btnLogin" />

        <Button
            android:id="@+id/btnReg"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_700"
            android:minWidth="70dip"
            android:text="@string/btnReg" />
    </LinearLayout>

</LinearLayout>
